fixed overflow on educational page of the quiz

--- a/apps/frontend/src/Pages/QuizPage/index.module.css
+++ b/apps/frontend/src/Pages/QuizPage/index.module.css
@@ -1,5 +1,6 @@
 body {
   background: #93b6eb;
+  overflow-x: hidden;
 }
 
 .container {
@@ -57,10 +58,12 @@ body {
 .textContainer {
   border-radius: 16px 16px 0px 0px;
   background: var(--Bijela, #f2f2f2);
-  width: 375px;
+  width: 376px;
+  margin-top: 16px;
   height: max-content;
   position: relative;
   bottom: 0px;
+  overflow-x: hidden;
 }
 
 .subtitle {
@@ -109,8 +112,8 @@ body {
   padding: 12px 8px;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 18px;
+  margin-right: 18px;
   top: 0px;
   border-radius: 16px;
   background: var(--Naranasta-default, #f5b943);
